--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inference (大宮)\n",
+    "# Inference (private images)\n",
     "\n",
     "1000枚で2分くらい。CPUで。"
    ]
