--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -262,7 +262,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "# 画像データに対する正規化\n",
+    "# 画像の正規化：ImageNetの平均と標準偏差\n",
     "mean = (0.485, 0.456, 0.406)\n",
     "std = (0.229, 0.224, 0.225)\n",
     "\n",
