update "adjust for CPU"

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -9,11 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/keimy/git/JOIR_age\n"
+     ]
+    }
+   ],
    "source": [
-    "# %cd /users/keimy/git/JOIR_age\n",
+    "%cd /users/keimy/git/JOIR_age\n",
     "\n",
     "# !pip install -r requirements_20221118.txt\n",
     "# !pip install pandas\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +74,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,16 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/miniconda3/envs/joir/lib/python3.8/site-packages/torch/functional.py:513: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/TensorShape.cpp:3610.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-      "/var/folders/lm/x817mz9j3dd69gvsjyjmyhcr0000gn/T/ipykernel_22858/4057488356.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/lm/x817mz9j3dd69gvsjyjmyhcr0000gn/T/ipykernel_23595/2666515213.py:17: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(model_path, map_location=torch.device('cpu')))\n"
      ]
     },
@@ -96,7 +102,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,16 +113,16 @@
     "\n",
     "# GPU使用する場合\n",
     "# device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "# device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cpu\")\n",
     "\n",
     "model = model.to(device)\n",
     "\n",
     "# 学習済みモデル読み込み\n",
-    "model_path = 'model_20220903.pth'\n",
+    "model_path = 'params/model_20220903.pth'\n",
     "\n",
-    "# GPU使用する場合\n",
+    "# GPU使用できるなら上ので\n",
     "# model.load_state_dict(torch.load(model_path))\n",
-    "# CPUで妥協\n",
     "model.load_state_dict(torch.load(model_path, map_location=torch.device('cpu')))"
    ]
   },
@@ -129,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +144,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.014361858367919922,
+       "elapsed": 0.0058307647705078125,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -152,7 +158,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2aa4049c4a34490fa6832f4d36c69d64",
+       "model_id": "ab31aec50c64469399e634dffff764d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[49.743153]\n",
+      "[[49.743145]\n",
       " [39.084404]]\n"
      ]
     }
